demo/goHi-with-ingress/goCluster.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: gocluster
   labels:
     name: gocluster
