demo/goHi-with-ingress/goHi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gohi
  namespace: gocluster
  labels:
    name: gohi
spec:
  ports:
  - port: 9091
  selector:
    name: gohi
