demo/goHi-with-ingress/traefik-web-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui2
  namespace: gocluster
spec:
  selector:
    k8s-app: traefik-ingress-lb2
  ports:
  - name: web
    port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui2
  namespace: gocluster
spec:
  rules:
  - host: m.scpman.com
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-web-ui2
          servicePort: web
  - host: g.scpman.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gohi 
          servicePort: 9091
